# BSMath

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: Test.yml
CMake/: Config.cmake.in  GTest.cmake  GetGTest.cmake  InstallProject.cmake  Util.cmake
Inc/BSMath/: Basic.h  Color.h  Creator.h  Hash.h  IntPoint.h  IntVector.h  MathUtility.h  Matrix.h  MatrixBase.h  MatrixBase0.h  Quaternion.h  Random.h  Rotator.h  SIMD.h  SSE.h  Utility.h  Vector.h  Vector2.h  Vector3.h  Vector4.h  VectorBase.h
Scripts/: Build.bat  Build.sh  GetGTest.sh  Setup.bat  Setup.sh
Tests/: CMakeLists.txt  ColorTest.cpp  CreatorTest.cpp  HashTest.cpp  IntPointTest.cpp  IntVectorTest.cpp  MatrixTest.cpp  QuaternionTest.cpp  RandomTest.cpp  RotatorTest.cpp  UtilityTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp  VectorTest.cpp
